Meta tags, favicon

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,26 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.ico" />
+		<link rel="icon" href="/bitmoji.png" />
+		<!-- Primary Meta Tags -->
+		<title>Rita Homolya</title>
+		<meta name="title" content="Rita Homolya">
+		<meta name="description" content="Graphic Design • Motion Graphic Design">
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://www.ritahomolya.com/">
+		<meta property="og:title" content="Rita Homolya">
+		<meta property="og:description" content="Graphic Design • Motion Graphic Design">
+		<meta property="og:image" content="/preview.png">
+
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://www.ritahomolya.com/">
+		<meta property="twitter:title" content="Rita Homolya">
+		<meta property="twitter:description" content="Graphic Design • Motion Graphic Design">
+		<meta property="twitter:image" content="/preview.png">
+
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
