--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/bitmoji.png" />
+		<link rel="icon" href="/favicon.png" />
 		<!-- Primary Meta Tags -->
 		<title>Rita Homolya</title>
 		<meta name="title" content="Rita Homolya">
